# qpik

./: README.md
qpik/: README.md  pyproject.toml
qpik/src/qpik/: crew.py  main.py
qpik/src/qpik/config/: agents.yaml  tasks.yaml
qpik/src/qpik/knowledge/: user_preference.txt
qpik/src/qpik/output/: final_report.md  narzedzie_data.json
qpik/src/qpik/tools/: custom_tool.py
