[project]
name = "qpik"
version = "0.1.0"
description = "qpik using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
qpik = "qpik.main:run"
run_crew = "qpik.main:run"
train = "qpik.main:train"
replay = "qpik.main:replay"
test = "qpik.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
